src/test/deca/syntax/valid/provided/publicField.deca


class A{
  int a = 5;

}

{
  A object = new A();
  int b = object.a;
  println(b);

}
