src/test/deca/syntax/invalid/provided/class_use_error.deca
{
 int a =5;
 int c =class;
  }
